# Spectres-Runtime

./: .editorconfig  .env.example  .env.test  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  Agents.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  integration.yml  pr-title.yml
.opencode/: opencode.json
.opencode/plugin/: git-attribution.ts
datasets/howtocook/: PROVENANCE.md
datasets/howtocook/ai-cleaned/: recipes.jsonl
datasets/howtocook/catalog/: generate_descriptions.json  generate_descriptions.py  recipes.jsonl
docker/: compose.yaml
docker/postgres/: init.sh  init.sql
docs/: environment.md
docs/design/: recipe-agent.md  user-profile-management.md
docs/plan/: TEMPLATE.md  v0.1.0-dev-env-quality-security.md  v0.2.0-agent-runtime-skeleton.md  v0.2.1-ag-ui-protocol.md
docs/plans/: v0.1-project-bootstrap.md  v0.1.md  v0.2-recipe-agent-skeleton.md  v0.3-recipe-ingestion.md  v0.4-recipe-agent-live.md  v0.4.1-recipe-agent-tool-driven.md  v0.4.1-task1-data-layer-report.md  v0.5-agentui-recipe-agent.md  v0.5.1-runtime-chat-transparency.md  v0.5.1-task1-stream-events-sample.jsonl  v0.5.1-task1-stream-inspection-report.md  v0.5.1-task2-events-detail.jsonl  v0.5.1-task2-events-search.jsonl  v0.5.1-task2-stream-reinspection-report.md
scripts/: howtocook.py  howtocook_clean.py  howtocook_extract.py  investigate_data_layer.py  reset_db.py  runtime_start.sh
src/spectres/: __init__.py  config.py  main.py
src/spectres/agents/: __init__.py  master.py  team_leader.py
src/spectres/db/: __init__.py  postgres.py
src/spectres/sessions/: __init__.py  session_manager.py
src/spectres/tools/: __init__.py  builtin.py
src/spectres_runtime/: __init__.py  app.py  config.py
src/spectres_runtime/recipe_agent/: __init__.py  agent.py  config.py  knowledge.py  tools.py
src/spectres_runtime/recipe_agent/ingestion/: __init__.py  __main__.py  howtocook.py  ingester.py  sink.py
src/spectres_runtime/recipe_agent/models/: __init__.py  ingredient.py  provenance.py  recipe.py
src/spectres_runtime/recipe_agent/sources/: __init__.py  base.py  howtocook.py
src/spectres_runtime/storage/: __init__.py  db.py  knowledge.py
tests/: __init__.py  conftest.py  test_agents.py  test_agui.py  test_config.py  test_cors.py  test_embedder_integration.py  test_health.py  test_healthz.py  test_integration_db.py  test_llm_integration.py  test_main.py  test_spectres.py  test_tools.py
tests/recipe_agent/: test_agent.py  test_config.py  test_ingestion.py  test_ingestion_integration.py  test_knowledge.py  test_knowledge_integration.py  test_models.py  test_sources.py  test_tools.py
tests/storage/: test_retrieval_integration.py  test_storage.py  test_storage_integration.py
