[project]
name = "spectres-runtime"
version = "0.1.0"
description = "Runtime tier of the Spectres personal assistant — agent orchestration, memory, knowledge, and capability exposure built on Agno's AgentOS."
readme = "README.md"
authors = [
    { name = "Dennis Gu", email = "longkerdandy@gmail.com" }
]
license = "Apache-2.0"
keywords = ["spectres", "agno", "agentos", "agents", "runtime", "assistant"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno>=2.6.9",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.15.15",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    { include-group = "lint" },
    { include-group = "test" },
]
