[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectres-runtime"
version = "0.2.0"
description = "Agent core runtime for the Spectres AI personal assistant system."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Spectres Team" },
]
keywords = ["ai", "agents", "runtime", "assistant"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agno[agui]>=2.0",
    "fastapi[standard]>=0.137.0",
    "openai>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15.0",
    "mypy>=2.0",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/longkerdandy/Spectres-Runtime"
Documentation = "https://github.com/longkerdandy/Spectres-Runtime/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/spectres"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests that do not require external services (default).",
    "integration: Tests that require external services such as a database or LLM API.",
    "db: Tests that require a running PostgreSQL database.",
    "llm: Tests that call a real LLM API.",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true
